# evals-agent-library-selection

./: .gitignore  README.md  pyproject.toml
artifacts/comparison/: eval_agents_weather_matrix_20260605T020938Z.json  eval_agents_weather_matrix_20260605T124508Z.json  eval_agents_weather_matrix_20260610T072414Z.json  research_snapshot.json
artifacts/deepeval/: 20260604T234212Z.json  20260604T235551Z.json  20260605T001742Z.json  20260605T002045Z.json  20260605T020938Z.json  20260605T124504Z.json  20260610T071951Z.json
artifacts/deepseek_calibration/: 20260605T001910Z.json
artifacts/negative/: 20260610T072334Z.json
artifacts/openevals/: 20260604T234212Z.json  20260604T235551Z.json  20260605T001643Z.json  20260605T020243Z.json  20260605T020617Z.json  20260605T020722Z.json  20260605T020838Z.json  20260605T124343Z.json  20260610T071859Z.json
docs/: eval-agents-base-path-teamlead-confluence-paste.txt  eval-agents-base-path-teamlead-confluence.html  eval-agents-base-path-teamlead-confluence.md  eval-agents-base-path-teamlead-confluence.wiki  eval-agents-base-path-teamlead.md  eval-agents-base-path-wiki-draft.md  eval-agents-implementation-plan.md  eval-agents-library-selection-design.md  eval-agents-library-selection-report.md
src/evals_agent/: __init__.py  agent.py  calibration.py  (+4 more)
tests/: test_agent_dispatch.py  test_agent_fixture.py  test_artifact_schema.py  test_build_comparison.py  test_calibration.py  test_calibration_runner.py  test_cloudru_fm_config.py  test_llm_weather_agent.py  test_negative_cases.py  test_runner_dry_runs.py  test_weather_tools.py
(+9 files in other folders)
